methods refactor